--- a/app/views/admins_ativo/vinculos/_form.html.erb
+++ b/app/views/admins_ativo/vinculos/_form.html.erb
@@ -10,27 +10,40 @@
     </div>
 <% end %>
 
+<h3>Novo Vinculo</h3>
+<hr>
 
 <%= form_with(model: [ :admins_ativo, @vinculo ], local: true ) do |form| %>
 
-  <div class="form-group">
+<div class="row g-3">
+  <div class="control col-md-4">
     <%= form.label :usuario %> <br>
-    <%= form.text_field :usuario_id, class:"form-control bg-light border-6 small" %>
-  </div>
-  <div class="form-group">
-    <%= form.label :area %> <br>
-    <%= form.text_field :usuario_id, class:"form-control bg-light border-6 small" %>
-  </div>
-  <div class="form-group">
-    <%= form.label :subarea %> <br>
-    <%= form.text_field :usuario_id, class:"form-control bg-light border-6 small" %>
-  </div>
-  <div class="form-group">
-    <%= form.label :observacao %> <br>
-    <%= form.text_field :usuario_id, class:"form-control bg-light border-6 small" %>
+    <%= form.select("usuario_id", @usuario_select, {include_blank: 'Selecione...'}, class:"form-control") %>
   </div>
 
+  <div class="control col-md-4">
+    <%= form.label :area %> <br>
+    <%= form.select("area_id", @area_select, {include_blank: 'Selecione...'}, class:"form-control") %>
+  </div>
+
+  <div class="control col-md-4">
+    <%= form.label :subarea %> <br>
+    <%= form.select("subarea_id", @subarea_select, {include_blank: 'Selecione...'}, class:"form-control") %>
+  </div>
+
+  <div class="control col-md-12">
+    <%= form.label :observacao %> <br>
+    <%= form.text_field :usuario_id, class:"form-control border-6 small" %>
+  </div>
+</div>
+<br>
+<h5>Ativos Vinculados</h5>
+
+
+
+<hr>
 <div class="text-right">
   <%= form.submit "Salvar", class:"btn btn-sm btn-primary" %>
 </div>
+
 <% end %>
