--- a/app/views/admins_ativo/vinculos/_addativo_fields.html.erb
+++ b/app/views/admins_ativo/vinculos/_addativo_fields.html.erb
@@ -4,6 +4,10 @@
       <%= f.select("ativo_id", @ativo_select, {include_blank: 'Selecione...'}, class:"form-control")%>
     </div>
 
+    <div class="control col-md-5">
+      <%= f.select("ativo_id", @ativo_select, {include_blank: 'Selecione...'}, class:"form-control")%>
+    </div>
+
     <div class="control col-md-2">
       <%= f.select("condicao_id", @condicao_select, {include_blank: 'Selecione...'}, class:"form-control")%>
     </div>
