--- a/app/views/admins_ativo/vinculos/_form.html.erb
+++ b/app/views/admins_ativo/vinculos/_form.html.erb
@@ -33,7 +33,7 @@
 
   <div class="control col-md-12">
     <%= form.label :observacao %> <br>
-    <%= form.text_field :usuario_id, class:"form-control border-6 small" %>
+    <%= form.text_field :observacao, class:"form-control border-6 small" %>
   </div>
 </div>
 <br>
