--- a/app/views/admins_ativo/vinculos/index.html.erb
+++ b/app/views/admins_ativo/vinculos/index.html.erb
@@ -1,6 +1,9 @@
 <div class="row ">
   <div class="col-lg-12">
-    <h1>Vinculos</h1>    
+    <h1>Vinculos</h1>
+            <%= link_to new_admins_ativo_vinculo_path do %>
+          <i class="fa fa-plus btn-sm btn-success" style="color:write"></i>
+        <% end %>   
   </div>
 </div>
 
@@ -9,13 +12,12 @@
 <table class="table table-hover">
   <thead>
     <tr>
-      <th>
-        <%= link_to new_admins_ativo_vinculo_path do %>
-          <i class="fa fa-plus btn-sm btn-success" style="color:write"></i>
-        <% end %>
-      <th>
-      <th>
-      </th>
+      <th>Usuário</th>
+      <th>Área</th>
+      <th>Subárea</th>
+      <th>Observação</th>
+      <th></th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
