--- a/app/views/admins_ativo/ativos/_form.html.erb
+++ b/app/views/admins_ativo/ativos/_form.html.erb
@@ -14,11 +14,17 @@
 <%= form_with(model: [ :admins_ativo, @ativo ], local: true ) do |form| %>
 <div class="row g-3">
   <div class="form-group col-md-2">
-    <%= form.label :tipo %> <br>
+    <%= form.label :tipo %>
+        <%= link_to new_admins_ativo_tipo_path do %>
+          <i class="fa fa-plus" style="color:green"></i>
+        <% end %>
     <%= form.select("tipo_id", @tipo_selects, {include_blank: 'Selecione...'}, class:"form-control") %>
   </div>
   <div class="form-group col-md-2">
-    <%= form.label :marca %> <br>
+    <%= form.label :marca %>
+        <%= link_to new_admins_ativo_marca_path do %>
+          <i class="fa fa-plus" style="color:green"></i>
+        <% end %>
     <%= form.select("marca_id", @marca_selects, {include_blank: 'Selecione...'}, class:"form-control") %>
   </div>
   <div class="form-group col-md-8">
