--- a/app/assets/stylesheets/admins_ativo.scss
+++ b/app/assets/stylesheets/admins_ativo.scss
@@ -5,4 +5,6 @@
 /*
 *= require fontawesome-free/css/all.min
 *= require sb-admin-2
+*= require @ttskch/select2-bootstrap4-theme/dist/select2-bootstrap4
+*= require @ttskch/select2-bootstrap4-theme/dist/select2
 */
