--- a/app/views/admins_ativo/ativos/_form.html.erb
+++ b/app/views/admins_ativo/ativos/_form.html.erb
@@ -18,14 +18,14 @@
         <%= link_to new_admins_ativo_tipo_path do %>
           <i class="fa fa-plus" style="color:green"></i>
         <% end %>
-    <%= form.select("tipo_id", @tipo_selects, {include_blank: 'Selecione...'}, class:"form-control") %>
+    <%= form.select("tipo_id", @tipo_selects, {include_blank: 'Selecione...'}, class:"form-control selectsearch") %>
   </div>
   <div class="form-group col-md-2">
     <%= form.label :marca %>
         <%= link_to new_admins_ativo_marca_path do %>
           <i class="fa fa-plus" style="color:green"></i>
         <% end %>
-    <%= form.select("marca_id", @marca_selects, {include_blank: 'Selecione...'}, class:"form-control") %>
+    <%= form.select("marca_id", @marca_selects, {include_blank: 'Selecione...'}, class:"form-control selectsearch") %>
   </div>
   <div class="form-group col-md-8">
     <%= form.label :modelo %> <br>
@@ -59,3 +59,4 @@
   </div>
 
 <% end %>
+
