--- a/app/views/admins_ativo/vinculos/_addativo_fields.html.erb
+++ b/app/views/admins_ativo/vinculos/_addativo_fields.html.erb
@@ -1,7 +1,7 @@
 <div class="control-group nested-fields">
   <div class="row g-3"><br>
     <div class="control col-md-2">
-      <%= f.select("ativo_id", @ativo_select, {include_blank: 'Selecione...'}, class:"form-control")%>
+      <%= f.select("ativo_id", @ativo_select, {include_blank: 'Selecione...'}, class:"form-control tombosearch")%>
     </div>
 
     <div class="control col-md-6">
@@ -21,3 +21,12 @@
   </div>
 </div>
 <br>
+
+
+<%= javascript_tag do %>
+  $(document).ready(function(){
+    $('.tombosearch').select2({
+      theme: 'bootstrap4',
+    });
+  });
+<% end %>
