--- a/app/views/layouts/ativos_layout.html.erb
+++ b/app/views/layouts/ativos_layout.html.erb
@@ -223,6 +223,7 @@
       <% end %>
     <% end %>
 
+  <!-- Select2 -->
     <%= javascript_tag do %>
       $(document).ready(function(){
         $('.selectsearch').select2({
