--- a/app/views/layouts/ativos_layout.html.erb
+++ b/app/views/layouts/ativos_layout.html.erb
@@ -226,9 +226,15 @@
   <!-- Select2 -->
     <%= javascript_tag do %>
       $(document).ready(function(){
-        $('.selectsearch').select2({
+        $('.select2').select2({
           theme: 'bootstrap4',
         });
+
+       $.ajax({
+
+        type:"get"
+        });
+
       });
     <% end %>
 
