--- a/app/views/admins_ativo/vinculos/_addativo_fields.html.erb
+++ b/app/views/admins_ativo/vinculos/_addativo_fields.html.erb
@@ -5,7 +5,7 @@
     </div>
 
     <div class="control col-md-6">
-      <%= f.collection_select(:ativo_id, Ativo.all, :id, :ativo_description, {include_blank: 'Selecione...'}, class:"form-control") %>
+      <%= f.collection_select :ativo_id, Ativo.includes(:tipo, :marca), :id, :ativo_description, {include_blank: 'Selecione...'}, class:"form-control" %>
     </div>
 
     <div class="control col-md-3">
