--- a/app/views/admins_ativo/admins/_form.html.erb
+++ b/app/views/admins_ativo/admins/_form.html.erb
@@ -14,6 +14,11 @@
 <%= form_with(model: [ :admins_ativo, @admin ], local: true ) do |form| %>
 
   <div class="form-group">
+    <%= form.label :nome %> <br>
+    <%= form.text_field :email, class:"form-control-label" %>
+  </div>
+
+  <div class="form-group">
     <%= form.label :email %> <br>
     <%= form.text_field :email, class:"form-control-label" %>
   </div>
