--- a/app/views/admins_ativo/vinculos/_addativo_fields.html.erb
+++ b/app/views/admins_ativo/vinculos/_addativo_fields.html.erb
@@ -1,10 +1,10 @@
 <div class="control-group nested-fields">
-  <div class="row g-3"><br>
+  <div class="row g-3">
     <div class="control col-md-2">
       <%= f.select("ativo_id", @ativo_select, {include_blank: 'Selecione...'}, class:"form-control tombosearch")%>
     </div>
 
-    <div class="control col-md-6">
+    <div class="control col-md-4">
       <%= f.collection_select :ativo_id, Ativo.ativo_descricao, :id, :ativo_description, {include_blank: 'Selecione...'}, class:"form-control" %>
     </div>
 
@@ -12,12 +12,15 @@
       <%= f.select("condicao_id", @condicao_select, {include_blank: 'Selecione...'}, class:"form-control")%>
     </div>
 
+    <div class="control col-md-3">
+      <%= f.text_field :descricao, class:"form-control"%>
+    </div>
 
     <div class="control">
       <%= link_to_remove_association(f, data: {confirm: "Certeza?"}, class: "btn-sm btn-danger") do %>
-      <i class="fa fa-times" style="color:white"></i>
-    <% end %>
-    </div><br>
+        <i class="fa fa-times" style="color:white"></i>
+      <% end %>
+    </div>
   </div>
 </div>
 <br>
