--- a/app/views/admins_ativo/vinculos/_form.html.erb
+++ b/app/views/admins_ativo/vinculos/_form.html.erb
@@ -47,7 +47,25 @@
     <% end %>
   </div>
 
-  <hr/>
+<div class="container">
+  <div class="row ">
+    <div class="col">
+      Tombo
+    </div>
+    <div class="col">
+      Descrição
+    </div>
+    <div class="col">
+      Status
+    </div>
+    <div class="col">
+      Observação
+    </div>
+  </div>
+</div>
+
+
+  <hr>
     <div id='addativos'>
       <%= form.fields_for :addativos do |addativo| %>
         <%= render partial: "addativo_fields", locals: { f: addativo } %>
