--- a/app/views/admins_ativo/usuarios/_form.html.erb
+++ b/app/views/admins_ativo/usuarios/_form.html.erb
@@ -18,6 +18,11 @@
     <%= form.text_field :nome, class:"form-control bg-light border-6 small" %>
   </div>
 
+  <div class="form-group">
+    <%= form.label :suporte %> <br>
+    <%= form.check_box :suporte, class:"form-check" %>
+  </div>
+
 <div class="text-right">
   <%= form.submit "Salvar", class:"btn btn-sm btn-primary" %>
 </div>
