--- a/app/views/layouts/ativos_layout.html.erb
+++ b/app/views/layouts/ativos_layout.html.erb
@@ -142,7 +142,7 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="d-lg-inline text-gray-600" style="font-family:Tahoma;"><%= current_admin.email %></span>
+                                <span class="d-lg-inline text-gray-600" style="font-family:Tahoma;"><%= current_admin.nome %></span>
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in">
