--- a/app/views/admins_ativo/admins/_form.html.erb
+++ b/app/views/admins_ativo/admins/_form.html.erb
@@ -15,7 +15,7 @@
 
   <div class="form-group">
     <%= form.label :nome %> <br>
-    <%= form.text_field :email, class:"form-control-label" %>
+    <%= form.text_field :nome, class:"form-control-label" %>
   </div>
 
   <div class="form-group">
