--- a/app/views/admins_ativo/admins/index.html.erb
+++ b/app/views/admins_ativo/admins/index.html.erb
@@ -4,16 +4,17 @@
   </div>
 </div>
 
+<div>
+  <%= link_to new_admins_ativo_admin_path do %>
+    <i class="fa fa-plus btn-sm btn-success" style="color:write"></i>
+  <% end %>
+</div>
 <br>
-
 <table class="table table-hover">
   <thead>
     <tr>
-      <th>
-        <%= link_to new_admins_ativo_admin_path do %>
-          <i class="fa fa-plus btn-sm btn-success" style="color:write"></i>
-        <% end %>
-      <th> 
+      <th>Nome
+      <th>Email
       <th>
       </th>
     </tr>
@@ -21,6 +22,7 @@
   <tbody>
     <% @admins.each do |admin| %>
       <tr>
+        <td><%= admin.nome %></td>
         <td><%= admin.email %></td>
         <td style="width: 10px">
           <%= link_to edit_admins_ativo_admin_path(admin) do %>
