--- a/app/views/admins_ativo/usuarios/index.html.erb
+++ b/app/views/admins_ativo/usuarios/index.html.erb
@@ -3,16 +3,17 @@
     <h1>Usuários</h1>    
   </div>
 </div>
-
+<div>
+  <%= link_to new_admins_ativo_usuario_path do %>
+    <i class="fa fa-plus btn-sm btn-success" style="color:write"></i>
+  <% end %>
+</div>
 <br>
-
 <table class="table table-hover">
   <thead>
     <tr>
-      <th>
-        <%= link_to new_admins_ativo_usuario_path do %>
-          <i class="fa fa-plus btn-sm btn-success" style="color:write"></i>
-        <% end %>
+      <th>Usuário
+      <th>Multiplos Vinculos
       <th>
       <th>
       </th>
@@ -22,6 +23,7 @@
     <% @usuarios.each do |usuario| %>
       <tr>
         <td><%= usuario.nome %></td>
+        <td><%= usuario.suporte %></td>
         <td style="width: 10px">
           <%= link_to edit_admins_ativo_usuario_path(usuario) do %>
             <i class="fa fa-edit"></i>
