--- a/app/views/admins_ativo/admins/_form.html.erb
+++ b/app/views/admins_ativo/admins/_form.html.erb
@@ -1,39 +1,42 @@
 
 <% if @admin.errors.any? %>
-    <div class="alert alert-danger alert-dismissable">
+  <div class="alert alert-danger alert-dismissable">
     <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
-        <ul>
-            <% @admin.errors.full_messages.each do |message| %>
-                <li><%= message %></li>
-            <% end %>
-        </ul>
-    </div>
+      <ul>
+        <% @admin.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+  </div>
 <% end %>
 
 
 <%= form_with(model: [ :admins_ativo, @admin ], local: true ) do |form| %>
 
-  <div class="form-group">
+<div class="row g-3">
+  <div class="control col-md-5">
     <%= form.label :nome %> <br>
-    <%= form.text_field :nome, class:"form-control-label" %>
+    <%= form.text_field :nome, class:"form-control" %>
   </div>
 
-  <div class="form-group">
+  <div class="control col-md-5">
     <%= form.label :email %> <br>
-    <%= form.text_field :email, class:"form-control-label" %>
+    <%= form.text_field :email, class:"form-control" %>
   </div>
 
-  <div class="form-group">
+  <div class="control col-md-5">
     <%= form.label :password %> <br>
-    <%= form.password_field :password, class:"form-control-label" %>
+    <%= form.password_field :password, class:"form-control" %>
   </div>
 
-  <div class="form-group">
+  <div class="control col-md-5">
     <%= form.label :password_confirmation %> <br>
-    <%= form.password_field :password_confirmation, class:"form-control-label" %>
+    <%= form.password_field :password_confirmation, class:"form-control" %>
   </div>
+</div>
 
 <div class="text-right">
   <%= form.submit "Salvar", class:"btn btn-sm btn-primary" %>
 </div>
+
 <% end %>
