--- a/app/views/admins_ativo/subareas/_form.html.erb
+++ b/app/views/admins_ativo/subareas/_form.html.erb
@@ -20,7 +20,7 @@
   
   <div class="form-group">
     <%= form.label :descricao %> <br>
-    <%= form.text_field :descricao, class:"form-control bg-light border-6 small" %>
+    <%= form.text_field :descricao, class:"form-control border-6 small" %>
   </div>
 
 <div class="text-right">
