--- a/app/views/admins_ativo/tipos/_form.html.erb
+++ b/app/views/admins_ativo/tipos/_form.html.erb
@@ -15,9 +15,11 @@
 
   <div class="form-group">
     <%= form.label :tipo %> <br>
-    <%= form.text_field :descricao, class:"form-control bg-light border-6 small" %>
+    <%= form.text_field :descricao, class:"form-control border-6 small" %>
   </div>
 
-  <button type="submit" class="btn btn-sm btn-primary">Salvar</button>
+  <div class="text-right">
+    <%= form.submit "Salvar", class:"btn btn-sm btn-primary" %>
+  </div>
 
 <% end %>
