--- a/app/views/admins_ativo/admins/_form.html.erb
+++ b/app/views/admins_ativo/admins/_form.html.erb
@@ -21,7 +21,7 @@
 
   <div class="control col-md-5">
     <%= form.label :email %> <br>
-    <%= form.text_field :email, class:"form-control" %>
+    <%= form.text_field :email, class:"form-control", placeholder:"@ativos.pge" %>
   </div>
 
   <div class="control col-md-5">
