--- a/app/views/layouts/ativos_layout.html.erb
+++ b/app/views/layouts/ativos_layout.html.erb
@@ -181,7 +181,7 @@
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>Ativos CTI - Service Desk - V 1.0.0</span>
+                        <span>Ativos PGE - CTI Service Desk - V 1.0.0</span>
                     </div>
                 </div>
             </footer>
