--- a/app/views/admins_ativo/ativos/index.html.erb
+++ b/app/views/admins_ativo/ativos/index.html.erb
@@ -14,10 +14,16 @@
 <table class="table table-hover">
   <thead>
     <tr>
+      <th>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" value="" for="flexCheckDefault"">
+          <label class="form-check-label" >
+          </label>
+        </div>
+      </th>
       <th>Descrição</th>
       <th>Tombo</th>
       <th>Serial</th>
-      <th>
       <th>
       <!-- <th>Especificação -->
       <!-- th>Data da Aquisição -->
@@ -27,6 +33,11 @@
   <tbody>
     <% @ativos.each do |ativo| %>
       <tr>
+        <td>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+          </div>
+        </td>
         <td><%= ativo.ativo_description %></td>
         <td><%= ativo.tombo %></td>
         <td><%= ativo.serial %></td>
