--- a/app/views/admins_ativo/welcome/index.html.erb
+++ b/app/views/admins_ativo/welcome/index.html.erb
@@ -8,6 +8,7 @@
       <ul>
         <% vinculo.addativos.each do |addativo| %>
           <li>
+            <%= addativo.ativo.tombo %> - 
             <%= addativo.ativo.ativo_description %>
           </li>
         <% end %>
