--- a/app/views/layouts/ativos_layout.html.erb
+++ b/app/views/layouts/ativos_layout.html.erb
@@ -64,6 +64,25 @@
             <!-- Divider -->
             <hr class="sidebar-divider my-0">
             <!-- Nav Item - Pages Collapse Menu -->
+            
+            <li class="nav-item active">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseAtivos"
+                    aria-expanded="true" aria-controls="collapseAtivos">
+                    <i class="fas fa-fw fa-desktop"></i>
+                    <span style="font-family:Tahoma;">Ativos</span>
+                </a>
+                <div id="collapseAtivos" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                      <%= link_to admins_ativo_ativos_path do %>
+                        <i class="collapse-item">Aquisição</i>
+                      <% end %>
+                      <%= link_to admins_ativo_ativos_path do %>
+                        <i class="collapse-item ">Ativos</i>
+                      <% end %>
+                    </div>
+                </div>
+            </li>
+
             <li class="nav-item active">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
                     aria-expanded="true" aria-controls="collapseTwo">
