--- a/app/views/admins_ativo/ativos/index.html.erb
+++ b/app/views/admins_ativo/ativos/index.html.erb
@@ -1,9 +1,20 @@
 <div class="row ">
   <div class="col-lg-12">
     <h1>Ativos</h1>
-      <%= link_to new_admins_ativo_ativo_path do %>
-        <i class="fa fa-plus btn-sm btn-success" style="color:write" title="Novo Ativo"></i>
-      <% end %>   
+    <%= link_to new_admins_ativo_ativo_path do %>
+      <button class="btn-sm btn-success" type="button">Novo Ativo</button>
+    <% end %>
+    <button type="button" id="btn-vincular" class="btn-sm btn-primary">Vincular ao Déposito</button>         
+    <div class="text-right">
+      <form class="d-sm-inline-block">  
+        <%= form_with(url: admins_ativo_search_path, local: true, method: :get) do |form| %>
+          <%= form.text_field :term, class:"form-control", placeholder:"Tombo, Serial ou Descrição"%>
+        <% end %>
+        <%= button_tag type: 'submit', class: "btn btn-primary" do %>
+          <i class="fa fa-search"></i>
+        <% end %>
+      </form>
+    </div>
   </div>
 </div>
 
@@ -13,11 +24,12 @@
   <thead>
     <tr>
       <th>
-        <input type="checkbox" id="todos_ativos" name="todos_ativos" title="Selecione todos os Ativos"></input>
+        <input type="checkbox" id="all_ativos" title="Marcar todos os Ativos"></input>
       </th>
       <th>Descrição</th>
       <th>Tombo</th>
       <th>Serial</th>
+      <th>
       <th>
     </tr>
   </thead>
@@ -25,7 +37,7 @@
 
       <% @ativos.each do |ativo| %>
         <tr>
-          <td><%= check_box_tag("ativos[]", ativo.id, false, class:'all_ativos') %></td>
+          <td><%= check_box_tag("ativos[]", ativo.id, false, class:'marcar') %></td>
           <td><%= ativo.ativo_description %></td>
           <td><%= ativo.tombo %></td>
           <td><%= ativo.serial %></td>
@@ -35,7 +47,7 @@
             <% end %>
           <td style="width: 10px">
             <%= link_to admins_ativo_ativo_path(ativo), method: :delete, data: {confirm: "Certeza?"} do %>
-              <i class="fa fa-trash" style="color:red"></i>
+              <i class="fa fa-trash"></i>
             <% end %>  
           </td>
         </tr>
@@ -44,24 +56,40 @@
   </tbody>
 </table>
 
+  <%= javascript_include_tag 'admins_ativo'%>
 
 <script>
-$("#todos_ativos").change(function () {
-    $(".all_ativos").prop('checked', $(this).prop("checked"));
-});
+    $(document).ready(function () {
+      $('#btn-vincular').click(function () {
+        var ativos_ids = $('.marcar:checked').map(function () {
+            return $(this).val();
+        }).get();
+        if (ativos_ids == '') {
+            alert('Selecione pelo menos um Ativo');
+        } else {
+            if (this.id == 'btn-vincular') {
+                
+            }
+        }
+      });
 
-$("#todos_ativos").click(function(){
-    $('.all_ativos').not(this).prop('checked', this.checked);
-});
+      $("#all_ativos").change(function () {
+          $('.marcar').prop('checked', $(this).prop("checked"));
+      });
 
-var todos_ativos = $("#todos_ativos");
-todos_ativos.click(function () {
-  if ( $(this).is(':checked') ){
-    $('.all_ativos').prop("checked", true);
-  }else{
-    $('.all_ativos').prop("checked", false);
-  }
-});
+      $("#all_ativos").click(function(){
+          $('.marcar').not(this).prop('checked', this.checked);
+      });
+
+      var all_ativos = $("#all_ativos");
+      all_ativos.click(function () {
+        if ( $(this).is(':checked') ){
+          $('.marcar').prop("checked", true);
+        }else{
+          $('.marcar').prop("checked", false);
+        }
+      });
+    });
 </script>
 
 <%= paginate @ativos %>
