--- a/app/views/admins_ativo/vinculos/index.html.erb
+++ b/app/views/admins_ativo/vinculos/index.html.erb
@@ -1,9 +1,9 @@
 <div class="row ">
   <div class="col-lg-12">
     <h1>Vinculos</h1>
-            <%= link_to new_admins_ativo_vinculo_path do %>
-          <i class="fa fa-plus btn-sm btn-success" style="color:write"></i>
-        <% end %>   
+      <%= link_to new_admins_ativo_vinculo_path do %>
+        <button class="btn-sm btn-success" style="color:write">Novo Vinculo</button>
+      <% end %>   
   </div>
 </div>
 
@@ -33,7 +33,7 @@
           <% end %>
         <td style="width: 10px">
           <%= link_to admins_ativo_vinculo_path(vinculo), method: :delete, data: {confirm: "Certeza?"} do %>
-            <i class="fa fa-trash" style="color:red"></i>
+            <i class="fa fa-trash"></i>
           <% end %>  
         </td>
       </tr>
