--- a/app/views/admins_ativo/ativos/_form.html.erb
+++ b/app/views/admins_ativo/ativos/_form.html.erb
@@ -56,7 +56,7 @@
   <hr/>
 * Campos obrigatorios
   <div class="text-right">
-    <%= form.submit "Salvar", class:"btn btn-sm btn-primary" %>
+    <%= form.submit "Salvar", class:"btn btn-primary" %>
   </div>
 
 <% end %>
