--- a/app/views/admins_ativo/vinculos/index.html.erb
+++ b/app/views/admins_ativo/vinculos/index.html.erb
@@ -1,15 +1,15 @@
 <div class="row ">
   <div class="col-lg-12">
-    <h1>Vinculos</h1>
+
       <%= link_to new_admins_ativo_vinculo_path do %>
-        <button class="btn-sm btn-success" style="color:write">Novo Vinculo</button>
+        <button class="btn btn-success" style="color:write">Novo Vinculo</button>
       <% end %>   
   </div>
 </div>
 
 <br>
 
-<table class="table table-hover ">
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Área</th>
