--- a/app/views/admins_ativo/aquisicao_modalidades/index.html.erb
+++ b/app/views/admins_ativo/aquisicao_modalidades/index.html.erb
@@ -12,7 +12,7 @@
 <table class="table table-hover">
   <thead>
     <tr>
-      <th>Tipo de Modalidade
+      <th>Modalidade Aquisição
       <th>
       <th>
       <th>
