--- a/app/views/admins_ativo/vinculos/_form.html.erb
+++ b/app/views/admins_ativo/vinculos/_form.html.erb
@@ -73,7 +73,7 @@
   <hr/>
 
 <div class="text-right">
-  <%= form.submit "Salvar", class:"btn btn-sm btn-primary" %>
+  <%= form.submit "Salvar", class:"btn btn-primary" %>
 </div>
 
 <% end %>
