--- a/app/views/admins_ativo/welcome/index.html.erb
+++ b/app/views/admins_ativo/welcome/index.html.erb
@@ -1,18 +1,62 @@
 
-<% @vinculos.each do |vinculo| %>
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h3 class="panel-title"><%= vinculo.vinculo_descricao %></h3>
-    </div>
-    <div class="panel-body">
-      <ul>
-        <% vinculo.addativos.each do |addativo| %>
-          <li>
-            <%= addativo.ativo.tombo %> - 
-            <%= addativo.ativo.ativo_description %>
-          </li>
-        <% end %>
-      </ul>
+
+<div class="row">
+  <div class="col-lg-6">
+    <!-- Circle Buttons -->
+    <div class="card shadow mb-4">
+      <div class="card-header py-3">
+        <h6 class="m-0 font-weight-bold text-primary">Aquisições</h6>
+      </div>
+      <div class="card-body">
+        <p>Coisando a coisa</p>
+        <!-- Circle Buttons (Default) -->
+        <div class="mb-2">
+            <code>.btn-circle</code>
+        </div>
+
+        <div class="mt-4 mb-2">
+            <code>.btn-circle .btn-sm</code>
+        </div>
+
+        <div class="mt-4 mb-2">
+            <code>.btn-circle .btn-lg</code>
+        </div>
+
+      </div>
     </div>
   </div>
-<% end %>
+
+  <div class="col-lg-6">
+    <div class="card shadow mb-4">
+      <div class="card-header py-3">
+        <h6 class="m-0 font-weight-bold text-primary">Ativos</h6>
+      </div>
+      <div class="card-body">
+        <div class="mb-2">
+          <code>
+            <ul>
+              <% @tipos.each do |tipo|%>
+                <li><%= "#{tipo.descricao} (#{tipo.ativos.count})" %></li>
+              <% end %>
+            </ul>
+          </code>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Brand Buttons -->
+<div class="card shadow mb-4">
+  <div class="card-header py-3">
+    <h6 class="m-0 font-weight-bold text-primary">Vinculos recentes</h6>
+  </div>
+  <div class="card-body">
+    <% @vinculos.each do |vinculo| %>
+      <div class="mb-2">
+        <code><%= vinculo.vinculo_descricao %></code>
+      </div>
+    <% end %>
+  </div>
+</div>
+
+
