--- a/app/views/admins_ativo/welcome/index.html.erb
+++ b/app/views/admins_ativo/welcome/index.html.erb
@@ -36,7 +36,7 @@
           <code>
             <ul>
               <% @tipos.each do |tipo|%>
-                <li><%= "#{tipo.descricao} (#{tipo.ativos.count})" %></li>
+                <li><%= "#{tipo.descricao} (#{tipo.ativos_count})" %></li>
               <% end %>
             </ul>
           </code>
