--- a/app/views/admins_ativo/welcome/index.html.erb
+++ b/app/views/admins_ativo/welcome/index.html.erb
@@ -1,5 +1,3 @@
-
-
 <div class="row">
   <div class="col-lg-6">
     <!-- Circle Buttons -->
@@ -8,20 +6,15 @@
         <h6 class="m-0 font-weight-bold text-primary">Aquisições</h6>
       </div>
       <div class="card-body">
-        <p>Coisando a coisa</p>
-        <!-- Circle Buttons (Default) -->
         <div class="mb-2">
-            <code>.btn-circle</code>
+          <code>.btn-circle</code>
         </div>
-
         <div class="mt-4 mb-2">
-            <code>.btn-circle .btn-sm</code>
+          <code>.btn-circle .btn-sm</code>
         </div>
-
         <div class="mt-4 mb-2">
-            <code>.btn-circle .btn-lg</code>
+          <code>.btn-circle .btn-lg</code>
         </div>
-
       </div>
     </div>
   </div>
@@ -34,11 +27,9 @@
       <div class="card-body">
         <div class="mb-2">
           <code>
-            <ul>
-              <% @tipos.each do |tipo|%>
-                <li><%= "#{tipo.descricao} (#{tipo.ativos_count})" %></li>
-              <% end %>
-            </ul>
+          <% @tipos.each do |tipo|%>
+            <li style="list-style:none;"><%= "#{tipo.descricao} (#{tipo.ativos_count})" %></li>
+          <% end %>
           </code>
         </div>
       </div>
